# font_wasm

./: Cargo.toml  Makefile  Noto-Regular.tar.br  README.md  index.html  index.js  package.json  webpack.config.js  worker.js
pkg/: font_wasm.js  font_wasm_bg.wasm  font_wasm_bg.wasm.br
src/: lib.rs
